Make -webkit-app-region CSS implementation self-consistent

The property -webkit-app-region went through renames and other changes.
It seems we can settle on none | drag | no-drag. The value none is used
internally as default, make it explicit by allowing it to be specified
in the style.

Bug: 803699

Change-Id: I1ec96c9e436c7595ac7ab34d90bfbfdd9ea48672
Reviewed-on: https://chromium-review.googlesource.com/964381
Reviewed-by: Eric Willigers <ericwilligers@chromium.org>
Commit-Queue: Rob Buis <rob.buis@samsung.com>
Cr-Commit-Position: refs/heads/master@{#543671}
Former-commit-id: 766bc54b4093641aa646a908b9c586e0898993af